Added update delete create

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,5 +4,53 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  color: rgb(196, 185, 127);
+}
+.costumeAttr {
+  background-color: rosybrown;
+  width: 180px;
+  margin: 4px;
+  text-align: center;
+  color: rgb(50, 104, 50);
+  padding: 9px;
+  border-radius: 6px;
+  font-weight: bolder;
+
+}
+
+.newAttr {
+  width: 180px;
+  margin: 4px;
+  text-align: center;
+  padding: 9px;
+  border-radius: 6px;
+  font-weight: bolder;
+
+}
+
+#newtitle{
+  color: #303b46;
+  font-weight: 700;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-decoration: underline;
+}
+
+.newvalues{
+  margin-right: 3px;
+  margin-bottom: 0;
+  padding: 9px;
+  justify-content:center;
+  font-weight: bold;
+  border-bottom: 2px solid rgb(19, 115, 224);
+  border-left: 2px solid  rgb(19, 115, 224);
+  background-color: rgb(151, 196, 196);
+  border-radius: 2px;
+}
+.specialstyles{
+    border-top: 2px solid darkmagenta;
+    width: 50%;
+}
+.newvalues:hover{
+  background-color: rgb(158, 69, 128);
+  color: black;
 }
